jenkins/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cts-inventory
  name: REPLACEME_NAME
  labels:
    app: REPLACEME_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: REPLACEME_NAME
  template:
    metadata:
      labels:
        app: REPLACEME_NAME
    spec:
      containers:
        - name: REPLACEME_NAME
          image: mysql:5.7
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: REPLACEME_NAME
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
