jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: REPLACEME_NAME
  namespace: cts-inventory
  labels:
    app: REPLACEME_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: REPLACEME_NAME
  template:
    metadata:
      labels:
        app: REPLACEME_NAME
    spec:
      containers:
        - name: REPLACEME_NAME
          image: REPLACEME_IMAGE
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/
      volumes:
        - name: config
          configMap:
            name: REPLACEME_CONFIG
